# chemunited-ui-only

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SOLID_ANALYSIS.md  pyproject.toml
src/chemunited/: __init__.py
src/chemunited/draw/: graph.py
src/chemunited/shared/: icon.py  orchestrator.py
src/chemunited/shared/elements/: access.py
src/chemunited/shared/elements/component/: component_core.py  graph_item.py
src/chemunited/shared/elements/component/component_parts/: __init__.py  connection_point.py  scene_item.py  svg_layer.py  text_element.py
src/chemunited/shared/enums/: __init__.py  elements_scene.py  protocols_enum.py  windows_enum.py
src/chemunited/shared/graph/: __init__.py  graph_core.py  scene_core.py
src/chemunited/shared/resources/: resources_rc.qrc
src/chemunited/shared/resources/qss/: README.md
src/chemunited/shared/resources/qss/dark/: loggings_widget.qss  main_window.qss
src/chemunited/shared/resources/qss/light/: loggings_widget.qss  main_window.qss
src/chemunited/shared/widgets/: loggings_widget.py  main_window.py  segment_widget.py
src/chemunited/shared/widgets/base_mode_editor/: __init__.py  _utils.py  card_factory.py  editor_widget.py  example.py  simple_example.py
src/chemunited/shared/widgets/base_mode_editor/cards/: base_card.py  bool_card.py  choice_card.py  float_card.py  int_card.py  list_card.py  quantity_card.py  str_card.py
src/chemunited/shared/workflows/: __init__.py  controller.py  design.py  exceptions.py  process_workflow.py  workflow_frames.py  workflow_rules.py  workflow_widget.py
src/chemunited/shared/workflows/elements/: __init__.py  access_point.py  style.py  work_connection.py  work_node.py
tests/: test_process_workflow.py  test_workflow_controller.py  test_workflow_graph_smoke.py  test_workflow_rules.py
