[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemunited"
version = "0.0.1"
description = "Visual interface for designing and executing chemistry automation workflows on top of FlowChem."
readme = "README.md"
requires-python = ">=3.10"
license =  { text = "MIT" }
keywords = ["control", "automation", "process"]
authors = [
    { name = "Samuel Vitor Saraiva", email = "samuel.saraiva@mpikg.mpg.de" }
]
maintainers = [
  { name = "Samuel Vitor Saraiva", email = "samuel.saraiva@mpikg.mpg.de" }
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "chemunited-core @ git+https://github.com/automatedchemistry/chemunited-core.git",
    "chemunited-workflow @ git+https://github.com/automatedchemistry/chemunited-workflow.git",
    "chemunited-sim @ git+https://github.com/automatedchemistry/chemunited-sim.git",
    "PyQt-Fluent-Widgets",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["chemunited*"]
namespaces = true